--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,11 +1,12 @@
 <div class="container">
-  <div class="row">
-    <div class="col-6 offset-3">
-<h1>New cocktail</h1>
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <h1>Create a new cocktail</h1>
 
-<%= render 'form', cocktail: @cocktail %>
-
-<%= link_to 'Back', cocktails_path %>
+      <%= simple_form_for @cocktail do |f| %>
+        <%= f.input :name %>
+        <%= f.button :submit, class: 'btn btn-primary' %>
+      <% end %>
     </div>
   </div>
 </div>
